--- a/bin/css/global.css
+++ b/bin/css/global.css
@@ -28,9 +28,11 @@ text-align: center;
 #rsvpList.loading{ background-image: url(../assets/images/spinner.gif); background-position: center center; background-size: 64px 64px; background-repeat:no-repeat;}
 #rsvpListContainer{display:none;}
 
-.mMember{ width:100px; height: 100px; background-color: #fff; margin:5px; display: inline-block; position:relative;}
-.mImage{ width: 100px; height: 100px; background-size: cover; }
+.mMember{ width:100px; height: 100px;  margin:5px; display: inline-block; position:relative;}
+.mImage{ width: 100px; height: 100px; background-size: cover; opacity: 0.5; }
+.mMember.joined .mImage{ opacity:1; pointer-events: none;}
 .mName { position: absolute; font-family: Verdana, Geneva, Tahoma, sans-serif;  bottom:0; left:0; padding:3px; background-color: rgba(0,0,0,0.7); color:#fff; width:100%; font-size: 12px;  line-height: 12px;}
+
 
 
 @media screen and (min-width: 480px) and (max-width: 767px){
